# Earthquake-simulation-tools

./: .env.example  .gitignore  Makefile  README.md  SVELTE_MIGRATION_SPEC.md  docker-compose.yml  nginx-dynamodb-cors.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: backend:deploy-dev.yml  frontend:deploy-dev.yml
apps/admin/: .env.example  Dockerfile  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
apps/admin/src/: app.d.ts  hooks.server.ts
apps/admin/src/routes/: +layout.svelte  +page.server.ts
apps/viewer/: .env.example  .eslintrc.cjs  Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vitest.config.ts
apps/viewer/public/: backgrounds.json
apps/viewer/scripts/: precompute-roads.js
apps/viewer/src/: App.svelte  app.css  main.ts  vite-env.d.ts
apps/viewer/src/lib/: env.test.ts  env.ts  japanmeshMaker.ts  mockData.ts  (+4 more)
apps/viewer/static/: cities.json  initial_view.json
cdk/backend-stack/: .gitignore  cdk.json  package.json
cdk/backend-stack/lib/: mosiri-stack.ts
cdk/narrowsim-batch-stack/: cdk.json  package-lock.json  package.json
cdk/narrowsim-batch-stack/lib/: narrow-sim.ts
cdk/narrowsim-batch-stack/narrow-batch/: Dockerfile  docker-entrypoint.sh
cdk/platform-stack/: .gitignore  cdk.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
cdk/platform-stack/lib/: platform.ts
cdk/widesim-batch-stack/: .gitignore  README.md  cdk.json  package-lock.json  package.json  pnpm-lock.yaml
cdk/widesim-batch-stack/lib/: wide-sim.ts
cdk/widesim-batch-stack/src/: handler.ts  package-lock.json  package.json  run.sh
cdk/widesim-batch-stack/wide-batch/: Dockerfile  docker-entrypoint.sh
cdk/widesim-batch-stack/wide-batch/exec/native/: .gitignore  CMakeLists.txt  build.sh  clean.sh  lib.h  main.cpp  polygon.h
dynamodb/: minio_set.sh
frontend/: package-lock.json  package.json
scripts/: earthquake-presets.json  seed-earthquake-presets.sh  update-city-code-11224.sh
viewer/: package.json
(+201 files in other folders)
